--- a/gradle.properties
+++ b/gradle.properties
@@ -3,3 +3,4 @@ kotlin.mpp.enableGranularSourceSetsMetadata=true
 kotlin.native.enableDependencyPropagation=false
 kotlin.js.generate.executable.default=false
 org.gradle.jvmargs=-Xmx2048m
+kotlin.mpp.stability.nowarn=true
