--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -12,8 +12,8 @@ jobs:
       matrix:
         # Use these Java versions
         java: [16]
-        # and run on both Linux and Windows
-        os: [ubuntu-20.04, windows-latest]
+        # and run on Linux, Windows and MacOS
+        os: [ubuntu-20.04, windows-latest, macos-11]
     runs-on: ${{ matrix.os }}
     steps:
       - name: checkout repository
