--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,7 +1,7 @@
 # This workflow will build a package using Gradle and then publish it to GitHub packages when a release is created
 # For more information see: https://github.com/actions/setup-java/blob/main/docs/advanced-usage.md#Publishing-using-gradle
 
-name: Gradle Package
+name: publish
 
 on:
   release:
@@ -46,12 +46,3 @@ jobs:
         env:
           MCD_USERNAME: ${{ secrets.MCD_USERNAME }}
           MCD_PASSWORD: ${{ secrets.MCD_PASSWORD }}
-
-      - name: stop gradle
-        run: ./gradlew --stop
-      - name: capture build artifacts
-        if: ${{ matrix.java == '16' }} # Only upload artifacts built from latest java on one OS
-        uses: actions/upload-artifact@v2
-        with:
-          name: Artifacts
-          path: build/libs/
