--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,8 +22,9 @@ jobs:
       - name: validate gradle wrapper
         uses: gradle/wrapper-validation-action@v1
       - name: setup jdk ${{ matrix.java }}
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2.3.1
         with:
+          distribution: 'zulu'
           java-version: ${{ matrix.java }}
       - name: make gradle wrapper executable
         if: ${{ runner.os != 'Windows' }}
@@ -42,7 +43,7 @@ jobs:
           MCD_PASSWORD: ${{ secrets.MCD_PASSWORD }}
       - name: Publish to GitHub Packages  (macOS)
         if: ${{ runner.os == 'macOS' }}
-        run: gradle publishMacosX64PublicationToMavenRepository
+        run: gradle publishMacosX64PublicationToMavenRepository publishMacosArm64PublicationToMavenRepository
         env:
           MCD_USERNAME: ${{ secrets.MCD_USERNAME }}
           MCD_PASSWORD: ${{ secrets.MCD_PASSWORD }}
