--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -44,8 +44,7 @@ jobs:
       - name: stop gradle
         run: ./gradlew --stop
       - name: capture build artifacts
-        if: ${{ matrix.java == '16' }} # Only upload artifacts built from latest java on one OS
         uses: actions/upload-artifact@v2
         with:
-          name: Artifacts
+          name: ${{ runner.os }}-Artifacts
           path: build/libs/
