--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,6 +19,7 @@ jobs:
       - name: checkout repository
         uses: actions/checkout@v2
       - uses: actions/cache@v2
+        if: ${{ runner.os != 'Windows' }}
         with:
           path: |
             ~/.gradle/caches
